# snake

./: pyproject.toml  test.py
snake/: __init__.py  cmd_line.py  exceptions.py  game.py  logger_setting.py  main.py  score.py  scores.py  session1.py  snake_scores.yml  state.py
tests/: __init__.py  tests_snake_game.py
