[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Victor Fayon <victor.fayon@et.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ouf = "snake.main:ouf"
snake = "snake.main:snakegame"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212"]

[tool.mypy]
files = "."
strict = true
pretty = true
show_error_code_links = true
show_error_context = true
show_column_numbers = true