[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Victor Fayon <victor.fayon@et.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ouf = "snake.main:ouf"
h = "snake.main:h"
snaketest="snake.session1:snake"
snake="snake.main:snakegame"
snakeclass="snake.main:snakeclass"
snakesansclass="snake.snakesansclasse:snake"
